--- a/jdsurvey-core/pom.xml
+++ b/jdsurvey-core/pom.xml
@@ -49,7 +49,7 @@
 		<commons-pool.version>1.5.4</commons-pool.version>
 		<commons-logging.version>1.1.1</commons-logging.version>
 
-		<aspectj.version>1.7.0.RC1</aspectj.version>
+		<aspectj.version>1.9.9.1</aspectj.version>
 		<springsource.oracle.jdbc.version>10.2.0.5</springsource.oracle.jdbc.version>
 
 
@@ -165,6 +165,16 @@
 
 
 	<dependencies>
+
+
+
+<dependency>
+    <groupId>javax.annotation</groupId>
+    <artifactId>javax.annotation-api</artifactId>
+    <version>1.3.2</version>
+</dependency>
+
+
 	
 		
 		<dependency>
@@ -647,9 +657,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>17</source>
+					<target>17</target>
+					<release>17</release>
 				</configuration>
 			</plugin>
 		</plugins>
